--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4 #Step 1: get the code from our repo
+
       - name: Set up JDK #step 2: install java developer kit
         uses: actions/setup-java@v4
         with:
@@ -18,4 +19,16 @@ jobs:
 
       - name: Build with maven #Step 3: Build project using Maven
         run: mvn -B package --file pom.xml
+
+
+      - name: Run program #Step 4: Run our program
+        run: java -cp target/app-1.jar org.example.Main > out.txt
+
+
+      - name: Upload output  #Step 5: Upload artifact (output)
+        uses: actions/upload-artifact@v4
+        with:
+          path: 'out.txt'
+          name: 'random-number-output'
+
 
